minikube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tepraticeminikube
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mydemoapp
  template:
    metadata:
      labels:
        app: mydemoapp
    spec:
      containers:
      - name: mydemoapp
        image: my-demo-app-pipeline
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp-cluster
spec:
  type: ClusterIP
  selector:
    app: mydemoapp
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pratice.com
      http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: demoapp-cluster
                port:
                  number: 80
          - path: /foo
            pathType: Prefix
            backend:
              service:
                name: foo-service
                port:
                  number: 8080
---
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
    - name: foo-app
      image: 'kicbase/echo-server:1.0'
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    - port: 8080
